# skycalc_ipy

./: .coveralls.yaml  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.bib  LICENCE  MANIFEST.in  README.md  pyproject.toml  requirements.github_actions.txt  requirements.readthedocs.txt  requirements.travis.py35.txt  requirements.travis.txt  setup.py  version.py
.github/: CODEOWNERS
.github/workflows/: bump.yml  publish_pypi.yml  replaceholder.yml  tests.yml
docs/: Makefile  codemeta.json  make.bat
docs/source/: GettingStarted.rst  conf.py  index.rst
docs/source/_static/logos/: logo_spectrum_code.py
skycalc_ipy/: __init__.py  core.py  params.yaml  ui.py  version.py
skycalc_ipy/data/: almanacquery_165c934eb0ad618a6f874d193e3013a5d8eeac6f3fd986076ae474746cdde416.json  almanacquery_165c934eb0ad618a6f874d193e3013a5d8eeac6f3fd986076ae474746cdde416.params.json  skymodel_100c4b1167bb736756014695fbf69a57d1af3b52f8f14a2af1144d3b4122647b.fits  skymodel_100c4b1167bb736756014695fbf69a57d1af3b52f8f14a2af1144d3b4122647b.params.json
skycalc_ipy/tests/: test_core.py  test_ui.py
tests/: test_core.py  test_ui.py
