[project]
name = "skycalc-ipy"
version = "0.5.4a0"
description = "Get atmospheric spectral information from the ESO skycalc server."
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at"},
]
maintainers = [
    { name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at" },
    { name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl" },
    { name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at" },
]
readme = "README.md"
keywords = [ "astronomy" ]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.11, <3.13"
dependencies = [
    "numpy (>=1.26.4,<2.3.0)",
    "astropy (>=6.1.5,<7.0.0)",
    "httpx (>=0.28.1,<1.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "astar-utils (>=0.3.3,<1.0)",
]

[project.optional-dependencies]
syn = [ "synphot>=1.5.0,<2.0.0" ]

[project.urls]
repository = "https://github.com/AstarVienna/skycalc_ipy"
documentation = "https://skycalc-ipy.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/AstarVienna/skycalc_ipy/issues"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
matplotlib = "^3.8.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.3, <8.0"
sphinx-book-theme = "^1.1.0"
sphinxcontrib-apidoc = ">=0.4, <0.6"
numpydoc = "^1.6.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]

[tool.coverage.report]
omit = ["skycalc_ipy/tests/*"]
