[project]
name = "skycalc-ipy"
version = "0.5.4"
description = "Get atmospheric spectral information from the ESO skycalc server."
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at"},
]
maintainers = [
    { name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at" },
    { name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl" },
    { name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at" },
]
readme = "README.md"
keywords = [ "astronomy" ]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy (>=1.26.4,<2.3.0)",
    "astropy (>=6.1.7,<8.0.0)",
    "httpx (>=0.28.1,<1.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "astar-utils (>=0.3.3,<1.0)",
]

[project.optional-dependencies]
syn = [ "synphot>=1.5.0,<2.0.0" ]

[project.urls]
repository = "https://github.com/AstarVienna/skycalc_ipy"
documentation = "https://skycalc-ipy.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/AstarVienna/skycalc_ipy/issues"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
matplotlib = "^3.9.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.4"
sphinxcontrib-apidoc = ">=0.6.0,<1.0"
numpydoc = "^1.9.0"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]

[tool.coverage.report]
omit = ["skycalc_ipy/tests/*"]
