[project]
name = "skycalc-ipy"
version = "0.7.0"
description = "Get atmospheric spectral information from the ESO skycalc server."
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at"},
]
maintainers = [
    { name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at" },
    { name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl" },
    { name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at" },
]
readme = "README.md"
keywords = [ "astronomy" ]
dynamic = [ "classifiers" ]
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy (>=1.26.4,<2.4.0)",
    "astropy (>=6.1.7,<8.0.0)",
    "httpx (>=0.28.1,<1.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "astar-utils (>=0.5.0,<1.0)",
]

[project.optional-dependencies]
syn = [
    "synphot>=1.6.1,<2.0.0",

    # SciPy is only an indirect dependency through synphot, but has limited
    # wheels for Python versions, so needs to be specified explicitly.
    "scipy (>=1.15.3,<1.16.0) ; python_version >= '3.10' and python_version < '3.11'",
    "scipy (>=1.17.0,<1.18.0) ; python_version >= '3.11'",
]

[project.urls]
Repository = "https://github.com/AstarVienna/skycalc_ipy"
Documentation = "https://skycalc-ipy.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/AstarVienna/skycalc_ipy/issues"
Changelog = "https://github.com/AstarVienna/skycalc_ipy/releases"


[tool.poetry]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
matplotlib = "^3.9.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.4"
sphinx-copybutton = ">=0.5.2,<1.0"
sphinxcontrib-apidoc = ">=0.6.0,<1.0"
sphinxcontrib-mermaid = "^2.0"
myst-nb = "^1.3.0"
sphinx-issues = "^5.0.1"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]
filterwarnings = [
    "error",
    # Should fix at some point, see #106
    "ignore::ResourceWarning",
]

[tool.coverage.report]
omit = ["skycalc_ipy/tests/*"]
